feat: convert VND to USD for creating order email
